# qt_libmpdclient_model

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mpdConnectionManager.cpp  mpdConnectionManager.h  queuemodel.cpp  queuemodel.h
mpdclient/: CMakeLists.txt  connection.cpp  connection.h  song.cpp  song.h  status.cpp
mpdclient/include/mpdclient/: song.h  status.h
tests/: CMakeLists.txt  tst_queueModelTest.cpp
